--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Building Exhibits with Omeka
+title: Building Exhibits with Omeka.net
 remote_theme: ubc-library-rc/rc-workshop-template
 footer_content: "<a href=\"https://github.com/ubc-library-rc/intro-omeka/\">View in GitHub</a>"
